Hooked up the button and score logic, edited the styling of all visible elements, hooked up the form resets, changed the factory function logic to use the "this" keyword to properly access the scope where the name and color player properties are. Made some minor edits to the html such as adding id tags for the control container buttons, and cleaned up various bugs such as calling the name function when trying to update player color from the game instance function.

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html, :root, body {
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
+  background-color: rgba(29,188,217,255);
 }
 
 #application-container {
@@ -17,12 +18,16 @@ html, :root, body {
   font-family: sans-serif;
   display: grid;
   grid-template: 3fr 1fr / 3fr 1fr;
-  row-gap: 10px;
+  grid-template-columns: minmax(530px, 3fr) 1fr;
+  grid-template-rows: minmax(530px, 3fr) 1fr;
+  gap: 10px;
 }
 
 #game-display-container {
   box-sizing: border-box;
   grid-area: 1 / 1 / span 1 / span 1;
+  min-height: 300px;
+  min-width: 300px;
   height: 100%;
   width: 100%;
   gap: 10px;
@@ -30,12 +35,105 @@ html, :root, body {
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
   border: 2px solid black;
+  background-color: rgba(233,128,81,255);
+  border-radius: 10px;
 }
 
 .move-space {
   box-sizing: border-box;
   height: 100%;
   border: 2px solid darkgray;
-  font-size: 50px;
+  min-height: 162px;
+  min-width: 162px;
+  font-size: min(10cqw, 10cqh);
   font-weight: 900;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255,200,47,255);
+  border-radius: 5px;
+}
+
+#score-display-container {
+  box-sizing: border-box;
+  grid-area: 1 / 2 / span 1 / span 1;
+  height: 100%;
+  min-width: 160px;
+  width: 100%;
+  gap: 50px;
+  padding: 10px;
+  display: grid;
+  grid-template: repeat(2, 1fr) / 1fr;
+  border: 2px solid black;
+  justify-content: center;
+  align-items: center;
+  padding-left: 5cqb;
+  overflow-x: hidden;
+  background-color: rgba(49,178,77,255);
+  border-radius: 10px;
+  font-size: max(24.4px, min(3cqw, 3cqh));
+  color: beige;
+  font-weight: 600;
+}
+
+#player1-score-container {
+  align-self: end;
+}
+
+#player2-score-container {
+  align-self: start;
+}
+
+.score-player-label {
+  text-wrap: nowrap;
+}
+
+#control-display-container {
+  box-sizing: border-box;
+  grid-area: 2 / 1 / span 1 / span 2;
+  height: 100%;
+  width: 100%;
+  gap: 10px;
+  padding: 20px;
+  display: grid;
+  grid-template: 1fr / repeat(3, 1fr);
+  border: 2px solid black;
+  align-items: center;
+  background-color: rgba(217,30,25,255);
+  border-radius: 10px;
+}
+
+#control-display-container>button {
+  height: fit-content;
+  width: fit-content;
+  font-size: min(3cqh, 3cqh);
+  padding: 15px;
+  text-wrap: nowrap;
+  background-color: rgba(198,38,144,255);
+  border: 0px solid black;
+  border-radius: 20px;
+  box-shadow: 0 0 5px black;
+  color: beige;
+  font-weight: 600;
+}
+
+#reset-button {
+  justify-self: end;
+}
+
+#option-button-player-1 {
+  justify-self: center;
+}
+
+#option-button-player-2 {
+  justify-self: start;
+}
+
+dialog {
+  padding: 15px;
+}
+
+form>div>* {
+  padding: 10px;
 }
